[gd_scene load_steps=7 format=2]

[ext_resource path="res://gfx/player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://sfx/laser5.ogg" type="AudioStream" id=3]
[ext_resource path="res://sfx/highDown.ogg" type="AudioStream" id=4]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 26, -23, 23, -26, -23, -26, -26, -23, -26, 23, -23, 26, 23, 26, 26, 23 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="Head" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Head"]
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Head/Sprite"]
occluder = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="GoodieSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 2.0

[node name="DieSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
